--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  roslibdart: 
-    path: ./plugin/roslibdart
+
   gamepads: ^0.1.1
   provider: ^6.1.2
   easy_loading_button: ^0.3.2
   toast: ^0.3.0
+  roslibdart: ^0.0.1-dev+4
 
 dev_dependencies:
   flutter_test:
