--- a/.github/workflows/web_build.yaml
+++ b/.github/workflows/web_build.yaml
@@ -18,5 +18,6 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
+          flutter-version-file: pubspec.yaml # path to pubspec.yaml
       - run: flutter pub get
       - run: flutter build web
