--- a/.github/workflows/web_build.yaml
+++ b/.github/workflows/web_build.yaml
@@ -12,12 +12,14 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
+    
       - name: Clone repository
         uses: actions/checkout@v4
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
-          flutter-version-file: pubspec.yaml # path to pubspec.yaml
+          flutter-version: 3.16.5
       - run: flutter pub get
+      - run: flutter test
       - run: flutter build web
