--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -66,6 +66,34 @@ jobs:
           asset_path: ${{ github.workspace }}/apk_release_package.tar.gz
           asset_name: ros_flutter_gui_app_apk.tar.gz
           asset_content_type: application/gzip
+  build_on_linux:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v4
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+      - run: |
+          sudo apt-get update -y
+          sudo apt-get install -y ninja-build libgtk-3-dev
+      - run: flutter build linux
+      - name: Package Release
+        run: |
+          tar -czvf linux_release_package.tar.gz -C ./build/web/ .
+          mv linux_release_package.tar.gz $GITHUB_WORKSPACE/linux_release_package.tar.gz
+      - name: Upload linux Release Asset
+        env:
+          # upload_url: ${{needs.create_release.outputs.upload_url}}
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+        id: upload-linux-release-asset 
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{needs.create_release.outputs.upload_url}}
+          asset_path: ${{ github.workspace }}/linux_release_package.tar.gz
+          asset_name: ros_flutter_gui_app_linux.tar.gz
+          asset_content_type: application/gzip
   build_on_windows:
     runs-on: windows-latest
     needs: create_release
@@ -78,8 +106,8 @@ jobs:
           channel: stable
       - run: flutter build windows
       - run:
-          $sourcePath = "./build/windows"
-          $destinationPath = "${{ github.workspace }}/windows_release.zip"
+          $sourcePath = "${{ github.workspace }}/build/windows";
+          $destinationPath = "${{ github.workspace }}/windows_release.zip";
 
           Add-Type -A 'System.IO.Compression.FileSystem'
           [System.IO.Compression.ZipFile]::CreateFromDirectory($sourcePath, $destinationPath)
