--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   toast: ^0.3.0
   roslibdart: ^0.0.1-dev+4
   shared_preferences: ^2.2.3
+  flutter_expandable_fab: ^2.0.0
 
 dev_dependencies:
   flutter_test:
