--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,16 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+  fonts:
+    - family: Reloc
+      fonts:
+        - asset: assets/icons/reloc/iconfont.ttf
+    - family: NavPoint
+      fonts:
+        - asset: assets/icons/nav_point/iconfont.ttf
+    - family: GamePad
+      fonts:
+        - asset: assets/icons/gamepad/iconfont.ttf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
