--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -18,5 +18,6 @@ jobs:
         uses: subosito/flutter-action@v2.16.0
         with:
           channel: stable
+      - run: flutter pub cache clean
       - run: flutter pub get
       - run: flutter build apk
