--- a/.github/workflows/linux_build.yaml
+++ b/.github/workflows/linux_build.yaml
@@ -18,6 +18,7 @@ jobs:
         uses: subosito/flutter-action@v2.16.0
         with:
           channel: stable
+      - run: flutter pub cache clean
       - run: |
           sudo apt-get update -y
           sudo apt-get install -y ninja-build libgtk-3-dev
