--- a/.github/workflows/windows_build.yaml
+++ b/.github/workflows/windows_build.yaml
@@ -17,4 +17,5 @@ jobs:
         uses: subosito/flutter-action@v2.16.0
         with:
           channel: stable
+      - run: flutter pub cache clean
       - run: flutter build windows
