--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,12 @@ flutter:
     - family: GamePad
       fonts:
         - asset: assets/icons/gamepad/iconfont.ttf
+    - family: Speed
+      fonts:
+        - asset: assets/icons/speed/iconfont.ttf
+    - family: Battery
+      fonts:
+        - asset: assets/icons/battery/iconfont.ttf
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
