--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   web: ^0.5.1
   win32: ^5.5.4
   flutter_launcher_icons: ^0.13.1
+  webview_flutter: ^4.9.0
+  http: ^1.2.2
+  dio: ^5.6.0
 
 # flutter_icons:
 #   android: true
