--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   wakelock_plus: ^1.2.8
   flame: ^1.19.0
+  package_info_plus: ^8.0.2
 
 # flutter_icons:
 #   android: true
