--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -1,3 +1,12 @@
+name: Linux
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 jobs:
   build:
     runs-on: macos-latest
