--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -18,6 +18,7 @@ jobs:
         uses: subosito/flutter-action@v2.16.0
         with:
           channel: stable
+          flutter-version: 3.24.0
       - run: flutter pub cache clean
       - run: flutter pub get
       - run: flutter build apk
