--- a/.github/workflows/android_build.yaml
+++ b/.github/workflows/android_build.yaml
@@ -14,6 +14,11 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '11'
       - name: Set up Flutter
         uses: subosito/flutter-action@v2.16.0
         with:
