--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -34,6 +34,11 @@ jobs:
         uses: subosito/flutter-action@v2.16.0
         with:
           channel: stable
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
       - run: flutter pub get
       - run: flutter build web
       - run: flutter build apk
