--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
-  gamepads: ^0.1.1
+  gamepads: ^0.1.2
   provider: ^6.1.2
   easy_loading_button: ^0.3.2
   toast: ^0.3.0
@@ -47,6 +47,9 @@ dependencies:
   web: ^0.5.1
   win32: ^5.5.4
   flutter_launcher_icons: ^0.13.1
+  wakelock_plus: ^1.2.8
+  flame: ^1.19.0
+  package_info_plus: ^8.0.2
 
 # flutter_icons:
 #   android: true
