--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
 #   image_path: "assets/icon/app_icon.png" # 你的图标路径
 #   adaptive_icon_background: "#ffffff" # 可选，设置 Android 自适应图标的背景色
 #   adaptive_icon_foreground: "assets/icon/app_icon_foreground.png"
+dependency_overrides:
+  gamepads_windows:
+    path: ./thirdparty/gamepads_windows  # 指向你自定义实现的路径
 
 dev_dependencies:
 
