--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -34,6 +34,7 @@ jobs:
         uses: subosito/flutter-action@v2.16.0
         with:
           channel: stable
+          flutter-version: "3.27.4"
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
