--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -28,17 +28,20 @@ jobs:
     runs-on: macos-latest
     needs: create_release
     steps:
+    steps:
       - name: Clone repository
         uses: actions/checkout@v4
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2.16.0
-        with:
-          channel: stable
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
           java-version: '17'
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2.16.0
+        with:
+          channel: stable
+          flutter-version: "3.27.4"
+      - run: flutter pub cache clean
       - run: flutter pub get
       - run: flutter build web
       - run: flutter build apk
