--- a/.github/workflows/windows_build.yaml
+++ b/.github/workflows/windows_build.yaml
@@ -17,5 +17,6 @@ jobs:
         uses: subosito/flutter-action@v2.16.0
         with:
           channel: stable
+          flutter-version: 3.27.4
       - run: flutter pub cache clean
       - run: flutter build windows
