--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -73,7 +73,7 @@ jobs:
           asset_name: ros_flutter_gui_app_apk.tar.gz
           asset_content_type: application/gzip
   build_on_linux:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: create_release
     steps:
       - name: Clone repository
