--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -82,6 +82,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
+          flutter-version: "3.27.4"
       - run: |
           sudo apt-get update -y
           sudo apt-get install -y ninja-build libgtk-3-dev
@@ -110,6 +111,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           channel: stable
+          flutter-version: "3.27.4"
       - run: flutter build windows
       - run:
           $sourcePath = "${{ github.workspace }}/build/windows/x64/runner/Release/";
