--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,17 @@
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
+android.nonTransitiveRClass=true
+
+# 启用自动Java版本检测
+org.gradle.java.installations.auto-detect=true
+org.gradle.java.installations.auto-download=true
+
+# 启用Gradle守护进程
+org.gradle.daemon=true
+
+# 启用并行构建
+org.gradle.parallel=true
+
+# 启用构建缓存
+org.gradle.caching=true
