--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   win32: ^5.5.4
   flutter_launcher_icons: ^0.13.1
   wakelock_plus: ^1.2.8
-  flame: ^1.19.0
+  flame: ^1.30.1
+  flame_svg: ^1.10.0
   package_info_plus: ^8.1.0
   flutter_mjpeg: ^2.0.4
   http: ^0.13.6
