--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,10 @@
 allprojects {
     repositories {
-        google()
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
         mavenCentral()
+        google()
     }
 }
 
